# Copyright (c) 2025 Nuewframe OSS

[package]
name = "nuewframe-timeout"
version = "1.0.0"
edition = "2024"
description = "A CLI tool to manage timeout duration of a provided command."
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["NuewLabs Inc <nuewframe@nuewlabs.com>"]
repository = "https://github.com/nuewframe/timeout"
keywords = ["timeout", "cli", "utility"]
categories = ["command-line-utilities"]

[[bin]]
name = "timeout"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
humantime = "2"
rustix = { version = "1", features = ["process"] }
thiserror = "1"
tokio = { version = "1", features = ["process", "macros", "rt-multi-thread", "signal", "time"] }
libc = { version = "0.2", optional = false }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[features]
default = []

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
